--- a/SGit/ant.properties
+++ b/SGit/ant.properties
@@ -1,2 +1,2 @@
-key.alias=sgit
-key.store=/Users/sheimi/Google\ Drive/Developer/SGitKey.jks
+key.alias=androidreleasekey
+key.store=D:/Android/android-release-key.keystore
